qt/gen_qaccessible.h

typedef QAccessible::State QAccessible__State;
typedef struct QAccessible__State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEvent QAccessibleEvent;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleStateChangeEvent QAccessibleStateChangeEvent;
typedef struct QAccessibleTextCursorEvent QAccessibleTextCursorEvent;
typedef struct QAccessibleTextInsertEvent QAccessibleTextInsertEvent;
typedef struct QAccessibleTextRemoveEvent QAccessibleTextRemoveEvent;
typedef struct QAccessibleTextSelectionEvent QAccessibleTextSelectionEvent;
typedef struct QAccessibleTextUpdateEvent QAccessibleTextUpdateEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
struct miqt_array /* of struct miqt_string */  QAccessibleActionInterface_actionNames(const QAccessibleActionInterface* self);
struct miqt_string QAccessibleActionInterface_localizedActionName(const QAccessibleActionInterface* self, struct miqt_string name);
struct miqt_string QAccessibleActionInterface_localizedActionDescription(const QAccessibleActionInterface* self, struct miqt_string name);
void QAccessibleActionInterface_doAction(QAccessibleActionInterface* self, struct miqt_string actionName);
struct miqt_array /* of struct miqt_string */  QAccessibleActionInterface_keyBindingsForAction(const QAccessibleActionInterface* self, struct miqt_string actionName);
struct miqt_string QAccessibleActionInterface_pressAction();
struct miqt_string QAccessibleActionInterface_increaseAction();
struct miqt_string QAccessibleActionInterface_decreaseAction();
struct miqt_string QAccessibleActionInterface_showMenuAction();
struct miqt_string QAccessibleActionInterface_setFocusAction();
struct miqt_string QAccessibleActionInterface_toggleAction();
struct miqt_string QAccessibleActionInterface_scrollLeftAction();
struct miqt_string QAccessibleActionInterface_scrollRightAction();
struct miqt_string QAccessibleActionInterface_scrollUpAction();
struct miqt_string QAccessibleActionInterface_scrollDownAction();
struct miqt_string QAccessibleActionInterface_nextPageAction();
struct miqt_string QAccessibleActionInterface_previousPageAction();
void QAccessibleActionInterface_operatorAssign(QAccessibleActionInterface* self, QAccessibleActionInterface* param1);
struct miqt_string QAccessibleActionInterface_tr2(const char* sourceText, const char* disambiguation);
struct miqt_string QAccessibleActionInterface_tr3(const char* sourceText, const char* disambiguation, int n);
void QAccessibleActionInterface_delete(QAccessibleActionInterface* self);
struct miqt_string QAccessibleImageInterface_imageDescription(const QAccessibleImageInterface* self);
QSize* QAccessibleImageInterface_imageSize(const QAccessibleImageInterface* self);
QPoint* QAccessibleImageInterface_imagePosition(const QAccessibleImageInterface* self);
void QAccessibleImageInterface_operatorAssign(QAccessibleImageInterface* self, QAccessibleImageInterface* param1);
void QAccessibleImageInterface_delete(QAccessibleImageInterface* self);
QAccessibleEvent* QAccessibleEvent_new(QObject* obj, int typ);
QAccessibleEvent* QAccessibleEvent_new2(QAccessibleInterface* iface, int typ);
int QAccessibleEvent_type(const QAccessibleEvent* self);
QObject* QAccessibleEvent_object(const QAccessibleEvent* self);
unsigned int QAccessibleEvent_uniqueId(const QAccessibleEvent* self);
void QAccessibleEvent_setChild(QAccessibleEvent* self, int chld);
int QAccessibleEvent_child(const QAccessibleEvent* self);
QAccessibleInterface* QAccessibleEvent_accessibleInterface(const QAccessibleEvent* self);
bool QAccessibleEvent_override_virtual_accessibleInterface(void* self, intptr_t slot);
QAccessibleInterface* QAccessibleEvent_virtualbase_accessibleInterface(const void* self);
void QAccessibleEvent_delete(QAccessibleEvent* self);
QAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new(QObject* obj, QAccessible__State* state);
QAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new2(QAccessibleInterface* iface, QAccessible__State* state);
QAccessible__State* QAccessibleStateChangeEvent_changedStates(const QAccessibleStateChangeEvent* self);
bool QAccessibleStateChangeEvent_override_virtual_accessibleInterface(void* self, intptr_t slot);
QAccessibleInterface* QAccessibleStateChangeEvent_virtualbase_accessibleInterface(const void* self);
void QAccessibleStateChangeEvent_delete(QAccessibleStateChangeEvent* self);
QAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new(QObject* obj, int cursorPos);
QAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new2(QAccessibleInterface* iface, int cursorPos);
void QAccessibleTextCursorEvent_setCursorPosition(QAccessibleTextCursorEvent* self, int position);
int QAccessibleTextCursorEvent_cursorPosition(const QAccessibleTextCursorEvent* self);
bool QAccessibleTextCursorEvent_override_virtual_accessibleInterface(void* self, intptr_t slot);
QAccessibleInterface* QAccessibleTextCursorEvent_virtualbase_accessibleInterface(const void* self);
void QAccessibleTextCursorEvent_delete(QAccessibleTextCursorEvent* self);
QAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new(QObject* obj, int start, int end);
QAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new2(QAccessibleInterface* iface, int start, int end);
void QAccessibleTextSelectionEvent_setSelection(QAccessibleTextSelectionEvent* self, int start, int end);
int QAccessibleTextSelectionEvent_selectionStart(const QAccessibleTextSelectionEvent* self);
int QAccessibleTextSelectionEvent_selectionEnd(const QAccessibleTextSelectionEvent* self);
bool QAccessibleTextSelectionEvent_override_virtual_accessibleInterface(void* self, intptr_t slot);
QAccessibleInterface* QAccessibleTextSelectionEvent_virtualbase_accessibleInterface(const void* self);
void QAccessibleTextSelectionEvent_delete(QAccessibleTextSelectionEvent* self);
QAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new(QObject* obj, int position, struct miqt_string text);
QAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new2(QAccessibleInterface* iface, int position, struct miqt_string text);
struct miqt_string QAccessibleTextInsertEvent_textInserted(const QAccessibleTextInsertEvent* self);
int QAccessibleTextInsertEvent_changePosition(const QAccessibleTextInsertEvent* self);
bool QAccessibleTextInsertEvent_override_virtual_accessibleInterface(void* self, intptr_t slot);
QAccessibleInterface* QAccessibleTextInsertEvent_virtualbase_accessibleInterface(const void* self);
void QAccessibleTextInsertEvent_delete(QAccessibleTextInsertEvent* self);
QAccessibleTextRemoveEvent* QAccessibleTextRemoveEvent_new(QObject* obj, int position, struct miqt_string text);
QAccessibleTextRemoveEvent* QAccessibleTextRemoveEvent_new2(QAccessibleInterface* iface, int position, struct miqt_string text);
struct miqt_string QAccessibleTextRemoveEvent_textRemoved(const QAccessibleTextRemoveEvent* self);
int QAccessibleTextRemoveEvent_changePosition(const QAccessibleTextRemoveEvent* self);
bool QAccessibleTextRemoveEvent_override_virtual_accessibleInterface(void* self, intptr_t slot);
QAccessibleInterface* QAccessibleTextRemoveEvent_virtualbase_accessibleInterface(const void* self);
void QAccessibleTextRemoveEvent_delete(QAccessibleTextRemoveEvent* self);
QAccessibleTextUpdateEvent* QAccessibleTextUpdateEvent_new(QObject* obj, int position, struct miqt_string oldText, struct miqt_string text);
QAccessibleTextUpdateEvent* QAccessibleTextUpdateEvent_new2(QAccessibleInterface* iface, int position, struct miqt_string oldText, struct miqt_string text);
struct miqt_string QAccessibleTextUpdateEvent_textRemoved(const QAccessibleTextUpdateEvent* self);
struct miqt_string QAccessibleTextUpdateEvent_textInserted(const QAccessibleTextUpdateEvent* self);
int QAccessibleTextUpdateEvent_changePosition(const QAccessibleTextUpdateEvent* self);
QAccessibleInterface* QAccessibleTextUpdateEvent_virtualbase_accessibleInterface(const void* self);